# ProjectX

./: README.md  pyproject.toml
diabetes_predictor/: analyze_risk_demo.py  debug_xml.py  demo_full_system.py  diabetes_monitor.db  inspect_xml.py  quick_start.py  requirements.txt  test_autonomous.py
diabetes_predictor/models/: best_model.pth
diabetes_predictor/src/: alert_system.py  api.py  api_v2.py  autonomous_monitor.py  data_loader.py  data_models.py  data_simulator.py  database.py  main.py  main_autonomous.py  predictor.py  preprocessor.py  risk_analyzer.py  risk_engine.py  simulation_engine.py  train_model.py  train_with_xml.py  xml_parser.py
diabetes_predictor/templates/: index.html
src/hypoglycemia_predictor/: __init__.py  __main__.py  alerts.py  data_generator.py  features.py  predictor.py
src/hypoglycemia_predictor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hypoglycemia_predictor/models/: data_models.py
tests/: test_alerts.py  test_data_generator.py  test_features.py  test_models.py  test_predictor.py
